Now using new websocket Client for buddylist Wraps websocket connection in Promise Adds `bp.emit()` events for buddylist websocket clients Unifies `auth::qtoken` logic Ensure local buddylist / messages data is cleared on logout Adds mobile styles for buddylist Updates password chnge to new API

--- a/v5/apps/based/buddylist/buddylist.css
+++ b/v5/apps/based/buddylist/buddylist.css
@@ -148,4 +148,20 @@
     .emojiPicker {
         display: none;
     }
+    .loginButton {
+        width: 100%;
+        font-size: 42px;
+        height: 200px;
+    }
+    .loginForm input {
+        font-size: 42px;
+        height: 96px;
+    }
+    #tosAgree {
+        width: 96px;
+        height: 96px;
+    }
+    .loginMessage {
+        font-size: 42px;
+    }
 }
